<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="app_title">Notepad</string>
    <string name="menu_new">New</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_second">SecondActivity</string>
    <string name="saveNoteButton">Save</string>
    <string name="menu_viewrecent">View Recent</string>
    <string name="menu_help">Help</string>
    <string name="menu_save">Save</string>
    <string name="menu_saveas">Save As</string>
    <string name="menu_exit">Exit</string>
    <string name="no_notes">No Notes Yet</string>
    <string name="help_text">Thank you for using Notepad.\n\n
        Following actions are possible from the Action Bar.\n
        1. To create a new note, click on the \'+\' (plus) icon.\n
        2. To save your note, click on the floppy disk.\n
        3. To rename your saved file, click on the floppy dish with the pen icon.\n
        4. To view recent documents, click the menu button of your phone/tablet, and select View Recent.\n
        5. To exit out of the app, click on the door.\n\n\n
        Developed by Miren Tanna, Pragati Shekhar and Lavanya Nadikuda. </string>
    <string name="title_activity_custom_help_dialog">CustomHelpDialog</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_save_new_note">SaveNewNoteActivity</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="dialogOk">Ok</string>
    <string name="dialogCancel">Cancel</string>
    <string name="fileNamePrompt">*Enter File Name</string>
    <string name="enterNewNotePrompt">Enter Note Here</string>
    <string name="title_activity_help_dialog_box">HelpDialogBox</string>
	<string name="title_readNoteContents">Note Contents</string>
</resources>
